--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
+    "autoprefixer": "^10.2.5",
+    "fuse.js": "^6.4.6",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.2.10",
+    "postcss-cli": "^8.3.1",
+    "postcss-import": "^14.0.1",
+    "postcss-load-config": "^3.0.1",
+    "postcss-nested": "^5.0.5",
     "rollup": "^2.3.4",
     "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^6.0.0",
+    "rollup-plugin-svelte": "^6.1.1",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "svelte-preprocess": "^4.7.2",
+    "tailwindcss": "^2.1.1"
   },
   "dependencies": {
     "sirv-cli": "^1.0.0"
